# clyde

./: .gitignore  IMPROVEMENTS.md  INJECTION_EVAL.md  README.md  ROUTING.md  pyproject.toml
.github/workflows/: ci.yml
clyde/: agent.py  approval.py  cli.py  config.py  lean.py  mcp.py  ollama_wire.py  providers.py  session.py  streaming.py  tools.py
tests/: mcp_stub.py  test_agent.py  test_exfil_guard.py  test_hardening.py  test_lean.py  test_mentions.py  test_phase2.py  test_properties.py  test_providers.py  test_streaming.py  test_tools.py
