[project]
name = "clyde"
version = "0.2.0"
description = "A minimal Claude Code-style terminal coding agent for local (Ollama) and online (OpenAI-compatible) models"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.scripts]
clyde = "clyde.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clyde*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "B008"]
